chore: Update Makefile

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,5 +55,5 @@ jobs:
         with:
           tag: ${{env.VERSION}}
           draft: false
-          prerelease: false
+          prerelease: true 
           generateReleaseNotes: true
