--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=app
+APP_NAME=eigen-minter
 
 # ---------------------
 # Dependencies versions
@@ -9,9 +9,6 @@ GOFUMPT_VERSION=v0.5.0
 
 # `mockgen` is used to generate mocks: https://github.com/golang/mock
 MOCKGEN_VERSION=v1.6.0
-
-# `courtney` is used to run tests and generate coverage reports: https://github.com/dave/courtney
-COURTNEY_VERSION=v0.4.0
 
 # `staticcheck` is used to run static analysis on the code: https://staticcheck.io
 STATICCHECK_VERSION=v0.4.3
