fix: Install abigen in CI workflow and ignore contract code

--- a/.github/workflows/check-source-code.yml
+++ b/.github/workflows/check-source-code.yml
@@ -72,6 +72,9 @@ jobs:
       - name: Install mockgen
         run: make install-mockgen
 
+      - name: Install abigen
+        run: make install-abigen
+
       - name: Generate mocks
         run: make generate
 
