--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,9 @@ name: Build and Release Docker Image
 env:
   DOCKER_REGISTRY: nethermind.jfrog.io
 
-  REPO_DEV: angkor-oci-local-dev
-  REPO_STAGING: angkor-oci-local-staging
-  REPO_PROD: angkor-oci-local-prod
+  REPO_DEV: angkor-docker-local-dev
+  REPO_STAGING: angkor-docker-local-staging
+  REPO_PROD: angkor-docker-local-prod
 
 on:
   push:
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        type: string
+        type: choice
         description: 'Environment to release to'
         required: true
         default: 'prod'
@@ -71,15 +71,21 @@ jobs:
   build_docker_image:
     name: Build and push Docker Image
     runs-on: ubuntu-latest
+    needs: define_tag
     env:
-        VERSION: ${{ steps.define_tag.outputs.tag }}
-        APP_NAME: ${{ github.event.repository.name }}
-        REPO: ${{ 
-          (github.event.inputs.version == 'dev' && env.REPO_DEV) ||
-          (github.event.inputs.version == 'staging' && env.REPO_STAGING) ||
-          env.REPO_PROD
-          }}
+      VERSION: ${{ needs.define_tag.outputs.tag }}
+      APP_NAME: ${{ github.event.repository.name }}
     steps:
+      - name: Set REPO environment variable
+        run: |
+          if [[ "${{ github.event.inputs.version }}" == "dev" ]]; then
+            echo "REPO=${{ env.REPO_DEV }}" >> $GITHUB_ENV
+          elif [[ "${{ github.event.inputs.version }}" == "staging" ]]; then
+            echo "REPO=${{ env.REPO_STAGING }}" >> $GITHUB_ENV
+          else
+            echo "REPO=${{ env.REPO_PROD }}" >> $GITHUB_ENV
+          fi
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -103,8 +109,8 @@ jobs:
           push: true
           file: Dockerfile
           tags: |
-            ${{ env.DOCKER_REGISTRY }}/${{ env.REPO_DEV }}/${{ env.APP_NAME }}:${{ env.VERSION }}
-            ${{ env.DOCKER_REGISTRY }}/${{ env.REPO_DEV }}/${{ env.APP_NAME }}:latest
+            ${{ env.DOCKER_REGISTRY }}/${{ env.REPO }}/${{ env.APP_NAME }}:${{ env.VERSION }}
+            ${{ env.DOCKER_REGISTRY }}/${{ env.REPO }}/${{ env.APP_NAME }}:latest 
           build-args: |
             APP_NAME=${{ env.APP_NAME }}
             VERSION=${{ env.VERSION }}
@@ -112,8 +118,9 @@ jobs:
   create-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
+    needs: build_docker_image
     env:
-        VERSION: ${{ steps.define_tag.outputs.tag }} 
+      VERSION: ${{ needs.define_tag.outputs.tag }} 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
