--- a/.env
+++ b/.env
@@ -1,17 +1,15 @@
-APP_NAME=app
+APP_NAME=eigen-minter
+ARCH=amd64
 
 # ---------------------
 # Dependencies versions
 # ---------------------
 
 # `gofumpt` is used to format the code: https://github.com/mvdan/gofumpt
-GOFUMPT_VERSION=v0.5.0
+GOFUMPT_VERSION=v0.7.0
 
 # `mockgen` is used to generate mocks: https://github.com/golang/mock
 MOCKGEN_VERSION=v1.6.0
 
-# `courtney` is used to run tests and generate coverage reports: https://github.com/dave/courtney
-COURTNEY_VERSION=v0.4.0
-
 # `staticcheck` is used to run static analysis on the code: https://staticcheck.io
-STATICCHECK_VERSION=v0.4.3
+STATICCHECK_VERSION=v0.5.1
