--- a/.github/workflows/check-source-code.yml
+++ b/.github/workflows/check-source-code.yml
@@ -22,12 +22,18 @@ jobs:
           git config --global core.eol lf
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
+
+      - name: Install abigen
+        run: make install-abigen
+
+      - name: Generate contract bindings
+        run: make generate
 
       - name: Instal gofumpt
         run: make install-gofumpt
@@ -69,10 +75,10 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
       
-      - name: Install mockgen
-        run: make install-mockgen
+      - name: Install abigen
+        run: make install-abigen
 
-      - name: Generate mocks
+      - name: Generate contract bindings
         run: make generate
 
       - name: Check go mod status
