--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,26 +6,13 @@
 	"image": "mcr.microsoft.com/devcontainers/base:noble",
 
 	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {
-			"version": "latest",
-			"enableNonRootDocker": "true",
-			"moby": "true"
-		},
-		"ghcr.io/devcontainers/features/go:1": {
-			"version": "1.23"
-		},
-		"ghcr.io/guiyomh/features/golangci-lint:0": {
-			"version": "latest"
-		},
-		"ghcr.io/guiyomh/features/gomarkdoc:0": {
-			"version": "latest"
-		},
-		"ghcr.io/guiyomh/features/goreleaser:0": {
-			"version": "latest"
-		},
-		"ghcr.io/marcozac/devcontainer-features/gofumpt:1": {
-			"version": "latest"
-		}
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+		"ghcr.io/devcontainers/features/go:1": {},
+		"ghcr.io/guiyomh/features/golangci-lint:0": {},
+		"ghcr.io/guiyomh/features/gomarkdoc:0": {},
+		"ghcr.io/guiyomh/features/goreleaser:0": {},
+		"ghcr.io/marcozac/devcontainer-features/gofumpt:1": {},
+		"ghcr.io/devcontainers-extra/features/pre-commit:2": {}
 	},
 	"customizations": {
 		"vscode": {
