--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,6 +92,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23"
+
+      - name: Install abigen
+        run: make install-abigen
+
+      - name: Generate contract bindings
+        run: make generate
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -124,7 +135,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
-          fetch-depth: 0
       - name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
