--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"ghcr.io/guiyomh/features/gomarkdoc:0": {},
 		"ghcr.io/guiyomh/features/goreleaser:0": {},
 		"ghcr.io/marcozac/devcontainer-features/gofumpt:1": {},
-		"ghcr.io/devcontainers-extra/features/pre-commit:2": {}
+		"ghcr.io/devcontainers-extra/features/pre-commit:2": {},
+		"ghcr.io/prulloac/devcontainer-features/commitizen:1": {}
 	},
 	"customizations": {
 		"vscode": {
