--- a/cz.yaml
+++ b/cz.yaml
@@ -1,7 +1,7 @@
 ---
 commitizen:
   name: cz_conventional_commits
-  tag_format: $version
+  tag_format: $major.$minor.$patch
   update_changelog_on_bump: true
   version: 0.1.0
   version_scheme: semver
