--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -137,6 +137,12 @@ jobs:
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
           fetch-depth: 0
+      - name: Configure commitizen
+        run: |
+          echo '[tool.commitizen]
+          tag_format = "v$major.$minor.$patch"
+          version_scheme = "semver"
+          ' > pyproject.toml
       - name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
