--- a/cz.yaml
+++ b/cz.yaml
@@ -3,5 +3,5 @@ commitizen:
   name: cz_conventional_commits
   tag_format: v$major.$minor.$patch
   update_changelog_on_bump: true
-  version: v1.0.0
+  version: 1.0.0
   version_scheme: semver
