--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install commitizen
-        run: pip install commitizen
+        run: pip install --upgrade commitizen
 
       # For the first time, you have to run cz bump manually
       - name: Bump version
@@ -142,7 +142,6 @@ jobs:
         uses: commitizen-tools/commitizen-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          changelog_increment_filename: CHANGELOG.md
           check_consistency: false
       - name: Release
         uses: softprops/action-gh-release@v1
