--- a/cz.yaml
+++ b/cz.yaml
@@ -1,7 +1,9 @@
 ---
 commitizen:
+  changelog_file: CHANGELOG.md
+  changelog_incremental: true
   name: cz_conventional_commits
-  tag_format: v$major.$minor.$patch
+  tag_format: v$version
   update_changelog_on_bump: true
-  version: v1.0.0
+  version: 1.0.0
   version_scheme: semver
