--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,6 +138,7 @@ jobs:
           token: "${{ secrets.GITHUB_TOKEN }}"
           fetch-depth: 0
           fetch-tags: true
+
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v6
         with:
@@ -149,12 +150,19 @@ jobs:
           git_tag_gpgsign: true
           git_push_gpgsign: true
           trust_level: 5
+
+      - name: Configure Git for GPG
+        run: |
+          git config --global user.signingkey 321A7D4C2501A665
+          git config --global commit.gpgsign true
+
       - name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           check_consistency: false
           gpg_sign: true
+          
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
