--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,19 +151,55 @@ jobs:
           git_push_gpgsign: true
           trust_level: 5
 
-      - name: Create bump and changelog
-        uses: commitizen-tools/commitizen-action@master
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          check_consistency: false
-          git_name: "github-actions[bot]"
-          git_email: "github-actions[bot]@users.noreply.github.com"
+          python-version: '3.x'
 
+      - name: Install commitizen
+        run: pip install --upgrade commitizen
+
+      - name: Bump Version and Create Changelog
+        id: cz
+        run: |
+          echo "Configure Git..."
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local pull.rebase true
+          git config --local commit.gpgsign true
+          git config --local tag.gpgsign false
+
+          export GPG_TTY=$(tty)
+          export GIT_EDITOR=true
+
+          echo "Bump version..."
+          cz --no-raise 21 bump --yes --changelog
+
+           # Get the new version from commitizen
+          new_version="$(cz version --project)"
+      
+          # Get the current branch name
+          current_branch="$(git branch --show-current)"
+      
+          # Remote repository URL with authentication
+          remote_repo="https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+      
+          # Pull the latest changes from the remote
+          git pull "$remote_repo" "$current_branch"
+      
+          # Create the new tag with a message
+          git tag -a "v${new_version}" -m "Release version ${new_version}"
+      
+          # Push changes and the new tag to the remote repository
+          git push "$remote_repo" "HEAD:${current_branch}" --tags
+      
+          # Output version number for next steps
+          echo "version=${new_version}" >> $GITHUB_OUTPUT
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           body_path: "CHANGELOG.md"
-          tag_name: v${{ env.REVISION }}
+          tag_name: v${{ steps.cz.outputs.version }}
           draft: false
           prerelease: true
           generate_release_notes: true
