--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -167,6 +167,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local pull.rebase true
           git config --local commit.gpgsign true
+          git config --local push.gpgsign true 
           git config --local tag.gpgsign false
 
           export GPG_TTY=$(tty)
